--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,10 +8,28 @@
 
 <ion-content [fullscreen]="true">
 
- <ion-card [routerLink]="['article-detail', article.id]" button *ngFor="let article of (articles | async)">
+  <div class="" *ngIf="!articles">
+    <ion-card>
+      <ion-skeleton-text class="img" animated></ion-skeleton-text>
+      <ion-card-header>
+        <ion-card-title><ion-skeleton-text animated></ion-skeleton-text></ion-card-title>
+        <ion-card-title><ion-skeleton-text animated></ion-skeleton-text></ion-card-title>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card>
+      <ion-skeleton-text class="img" animated></ion-skeleton-text>
+      <ion-card-header>
+        <ion-card-title><ion-skeleton-text animated></ion-skeleton-text></ion-card-title>
+        <ion-card-title><ion-skeleton-text animated></ion-skeleton-text></ion-card-title>
+      </ion-card-header>
+    </ion-card>
+  </div>
+
+ <ion-card [routerLink]="['components/article-details', article.id]"  button *ngFor="let article of (articles | async)">
     <ion-card-header>
-      <ion-card-title>{{ article.name }}</ion-card-title>
-      <ion-card-subtitle>{{ article.author }}</ion-card-subtitle>
+      <ion-card-title>Title: {{ article.name }}</ion-card-title>
+      <ion-card-subtitle>{{ article.category }}</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
 
