--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,7 +26,7 @@
     </ion-card>
   </div>
 
- <ion-card [routerLink]="['components/article-details', article.id]"  button *ngFor="let article of (articles | async)">
+ <ion-card [routerLink]="['pages/article-detail', article.id]"  button *ngFor="let article of (articles | async)">
     <ion-card-header>
       <ion-card-title>Title: {{ article.name }}</ion-card-title>
       <ion-card-subtitle>{{ article.category }}</ion-card-subtitle>
