--- a/src/app/pages/article-detail/article-detail.page.html
+++ b/src/app/pages/article-detail/article-detail.page.html
@@ -21,12 +21,12 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Article title {{ article }}</ion-card-title>
-      <ion-card-subtitle></ion-card-subtitle>
+      <ion-card-title>Article title: {{ article!.name }}</ion-card-title>
+      <ion-card-subtitle>Author:  {{ article!.category }}</ion-card-subtitle>
     </ion-card-header>
-
+   
     <ion-card-content>
-      
+      {{ article!.text }}
     </ion-card-content>
   </ion-card>
 
