--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,7 +29,7 @@
  <ion-card [routerLink]="['pages/article-detail', article._id]"  button *ngFor="let article of (articles | async)">
     <ion-card-header>
       <ion-card-title>Title: {{ article.name }}</ion-card-title>
-      <ion-card-subtitle>Id: {{ article._id }}</ion-card-subtitle>
+      <ion-card-subtitle>Category: {{ article.category.name }}</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
 
