--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon name="accessibility-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
+      <ion-label>Authors</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
